--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="/custom.css"/>
     </head>
     <body>
-        <div id="map" class="container"></div>
+        <div id="map" class="container" th:if="${buses != null and buses.size() > 0}"></div>
         <div class="container bg-light justify-content-center">
             <div class="row">
                 <div class="span6" style="float: none; margin: 0 auto;">
